--- a/tema3/client/package.json
+++ b/tema3/client/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.0.7",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.0.7",
@@ -23,6 +24,7 @@
     "@angular/router": "~9.0.7",
     "component": "^1.1.0",
     "express": "^4.17.1",
+    "firebase": "^7.13.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
