speech to text service is working

--- a/tema3/api/functions/package.json
+++ b/tema3/api/functions/package.json
@@ -18,7 +18,8 @@
     "express": "latest",
     "cors": "latest",
     "body-parser": "latest",
-    "@google-cloud/speech": "latest"
+    "@google-cloud/speech": "latest",
+    "@google-cloud/storage": "latest"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
