--- a/tema3/api/functions/package.json
+++ b/tema3/api/functions/package.json
@@ -13,16 +13,18 @@
     "node": "8"
   },
   "dependencies": {
-    "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0",
-    "express": "latest",
-    "cors": "latest",
-    "body-parser": "latest",
     "@google-cloud/speech": "latest",
     "@google-cloud/storage": "latest",
-    "multer": "latest"
+    "body-parser": "latest",
+    "busboy": "latest",
+    "cors": "latest",
+    "express": "latest",
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.3.0",
+    "raw-body": "latest"
   },
   "devDependencies": {
+    "connect-busboy": "0.0.2",
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1",
     "firebase-functions-test": "^0.1.6"
