--- a/tema3/api/firebase.json
+++ b/tema3/api/firebase.json
@@ -22,6 +22,9 @@
     "firestore": {
       "port": "5002"
     },
+    "database": {
+      "port": 9000
+    },
     "pubsub": {
       "port": 8085
     }
