moved back-end, auth and textToSpeech to azure

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,7 @@ tema3/client/src/app/firebaseConfig.js
 the-boyz-56c01-a8ba3771ec10.json
 sensitive.js
 tema3/client/dist/
+tema4/client/src/environments/environment.ts
+tema4/client/src/app/utils/azure/text-to-speech.config.ts
+tema4/api/utils/config.js
+tema4/client/src/app/utils/auth/config.ts
