--- a/tema4/api/package.json
+++ b/tema4/api/package.json
@@ -14,8 +14,16 @@
     "express": "latest",
     "https-proxy-agent": "^3.0.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.11.0",
+    "multer-azure": "^2.0.1",
+    "multipart": "^0.1.5",
     "passport-azure-ad": "^4.2.1",
     "raw-body": "latest"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@azure/storage-blob": "^12.1.1",
+    "into-stream": "^5.1.1",
+    "multer": "^1.4.2",
+    "multer-azure-storage": "^0.2.0",
+    "parse-multipart": "^1.0.4"
+  }
 }
