--- a/tema4/api/package.json
+++ b/tema4/api/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@azure/storage-blob": "^12.1.1",
     "into-stream": "^5.1.1",
+    "mongodb": "^3.5.6",
     "multer": "^1.4.2",
     "multer-azure-storage": "^0.2.0",
     "parse-multipart": "^1.0.4"
