--- a/Project_The_Boyz/client/package.json
+++ b/Project_The_Boyz/client/package.json
@@ -31,6 +31,7 @@
     "firebase": "^7.13.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "ng-chat": "^3.0.0",
     "recordrtc": "^5.5.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
